--- a/frame/index.php.html
+++ b/frame/index.php.html
@@ -67,8 +67,8 @@
   </ul></div>
 </div>                          <div style="padding: 5px;">
     <div class="blockContent"><hr width="90%">
-<center>
-[AD]<br>
+<!-- <center>
+[AD]<br> -->
 <script type="text/javascript"><!--
 google_ad_client = "pub-6416440120333674";
 google_alternate_color = "FFFFFF";
@@ -84,9 +84,9 @@ google_color_link = "0000BB";
 google_color_url = "009000";
 google_color_text = "111111";
 //--></script>
-<script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+<!-- <script type="text/javascript" src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
 </script>
-</center>
+</center> -->
 <br>
 <hr width="90%"></div>
 </div>                          <div style="padding: 5px;">
