add article 380 to the index

--- a/frame/index.php.html
+++ b/frame/index.php.html
@@ -54,6 +54,7 @@
     </tbody></table></div>
 </div>                          <div style="padding: 5px;">
     <div class="blockContent"><ul>
+      <li><a href="modules/news/article.php%3Fstoryid%3D380.html">当ニュースページ更新終了のお知らせ </a> (2025-06-25)</li>
       <li><a href="modules/news/article.php%3Fstoryid%3D379.html">MySQL 8.0.27リリース </a> (2021-10-20)</li>
       <li><a href="modules/news/article.php%3Fstoryid%3D378.html">Club MySQL #5 ～SQLデータベースのセキュリティ (4/22) </a> (2021-4-15)</li>
       <li><a href="modules/news/article.php%3Fstoryid%3D377.html">JPUG &amp; MyNA合同勉強会 -PLEASE 2021/4- (04/12) </a> (2021-4-10)</li>
